# CapCutAPI

./: README_MODULE.md  README_YAML.md  add_audio_track.py  add_image_impl.py  add_video_track.py  capcut_server.py  clone_draft.py  copy_draft.py  export_to_video_impl.py  list_drafts.py  pyproject.toml  save_draft_impl.py  test.py  test_clone_draft.py  test_list_drafts.py  test_move_into_cc_with_rename.py  test_overlap_error.py  test_summarize_draft.py  test_yaml.py  util.py
CapCutAPI/: __init__.py
pyJianYingDraft/: track.py  video_segment.py
pyJianYingDraft/metadata/: capcut_transition_meta.py
settings/: local.py
