[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capcut-api"
version = "1.0.0"
description = "Open source CapCut API tool with MCP support"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
    "flask>=2.3.0",
    "imageio>=2.9.0",
    "oss2>=2.17.0",
    "json5>=0.9.14",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
    "aiohttp>=3.8.0",
    "websockets>=11.0",
    "jsonrpc-base>=2.2.0",
    "jsonrpc-websocket>=3.1.0",
    "jsonrpc-async>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/ashreo/CapCutAPI"
Repository = "https://github.com/ashreo/CapCutAPI.git"
Issues = "https://github.com/ashreo/CapCutAPI/issues"

[tool.setuptools]
include-package-data = true
py-modules = [
    "export_to_video_impl",
    "add_audio_track",
    "add_effect_impl",
    "add_image_impl",
    "copy_draft",
    "clone_draft",
    "add_sticker_impl",
    "add_subtitle_impl",
    "add_text_impl",
    "add_video_keyframe_impl",
    "add_video_track",
    "capcut_server",
    "create_draft",
    "downloader",
    "draft_cache",
    "get_duration_impl",
    "mcp_server",
    "oss",
    "list_drafts",
    "save_draft_impl",
    "save_task_cache",
    "util",
]

[tool.setuptools.packages.find]
include = ["pyJianYingDraft", "settings", "CapCutAPI"]

[tool.setuptools.package-data]
pyJianYingDraft = ["draft_content_template.json"]